[package]
name = "jwtinfo"
description = "Command line tool to get information about JWT tokens"
categories = ["command-line-interface", "command-line-utilities", "cryptography", "development-tools", "development-tools::debugging"]
repository = "https://github.com/lmammino/jwtinfo"
documentation = "https://github.com/lmammino/jwtinfo"
readme = "README.md"
version = "0.1.4"
authors = ["Luciano Mammino", "Stefano Abalsamo"]
edition = "2018"
license = "MIT"

[dependencies]
clap = "2.33.0"
base64 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
