[package]
name = "jwtinfo"
description = "Command line tool to get information about JWTs (Json Web Tokens)"
keywords = ["JWT", "token", "web", "json"]
categories = ["command-line-interface", "command-line-utilities", "cryptography", "development-tools", "development-tools::debugging"]
repository = "https://github.com/lmammino/jwtinfo"
documentation = "https://github.com/lmammino/jwtinfo"
readme = "README.md"
version = "0.4.0"
authors = ["Luciano Mammino", "Stefano Abalsamo"]
edition = "2018"
license = "MIT"

[dependencies]
clap = "4.3"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "jwtinfo"
path = "src/main.rs"

[[bin]]
name = "jwtinfo"
path = "src/cli.rs"
